chore: prefer Files.writeString()